turtleart.lessons.turtleart.Main.Triangle.scala.error
Source:4: error: not found: value cos
	var i = 100/cos(30)
                    ^