turtleart.lessons.turtleart.Main.Triangle.scala.code
override def run() {
	droite(30)
	var i = 100/cos(30)
	avance(1)
	droite(120)
	avance(i)
	droite(30)
	avance(200)
	droite(30)
}
